# ros_gz_omni

./: LICENSE  README.md  TROUBLESHOOTING.md  test.py
ros_gz_omni_application/: CMakeLists.txt  package.xml
ros_gz_omni_bringup/: CMakeLists.txt  package.xml
ros_gz_omni_bringup/config/: mecanum_drive.rviz  omni_drive.rviz  ros_gz_mecanum_bridge.yaml  ros_gz_omni_bridge.yaml  teleop_twist_joy.yaml
ros_gz_omni_bringup/launch/: diff_drive.launch.py  mecanum_drive.launch.py  omni_drive.launch.py  rrbot_setup.launch.py
ros_gz_omni_description/: CMakeLists.txt  package.xml
ros_gz_omni_description/models/diff_drive/: model.sdf
ros_gz_omni_description/models/mecanum_drive/: model.config  model.sdf
ros_gz_omni_description/models/old_version/omni_drive_old/: model.config
ros_gz_omni_description/models/old_version/omni_drive_v0/: model.old.sdf
ros_gz_omni_description/models/old_version/omni_drive_v0/meshes/: wheel4_body_omni_v4__2.part  wheel4_shaft_holder_v2.part
ros_gz_omni_description/models/old_version/omni_drive_v1/: model.old.sdf  model.sdf  robot.urdf
ros_gz_omni_description/models/omni_drive/: model.config  model.old.sdf  model.sdf  model.sdf.old  robot.urdf
ros_gz_omni_description/models/omni_drive/meshes/: body_1.part  body_1.scad  body_2.part  chassis.part  couple.part  part_1.part  part_1.stl  shaft.part  tyre.part  tyre.stl  wheel4_body_omni_v4.part  wheel4_body_omni_v4__2.part  wheel4_omniwheel_tyre_v1.part  wheel4_shaft_holder_v2.part
ros_gz_omni_description/models/omni_drive_old/: model.sdf
ros_gz_omni_description/models/omni_drive_v0/: model.config  model.sdf
ros_gz_omni_description/models/omni_drive_v0/meshes/: frame.part  frame.stl  part_1.part  wheel4_omniwheel_tyre_v1.part
ros_gz_omni_gazebo/: CMakeLists.txt  README.md  package.xml
ros_gz_omni_gazebo/include/ros_gz_omni_gazebo/: BasicSystem.hh  FullSystem.hh  OmniDrive.hh  OmniMath.hh
ros_gz_omni_gazebo/src/: BasicSystem.cc  FullSystem.cc  OmniDrive.cc
ros_gz_omni_gazebo/src/math/: OmniMath.cc
ros_gz_omni_gazebo/worlds/: diff_drive.sdf  mecanum_drive.sdf  omni_drive.sdf
(+11 files in other folders)
